--- a/page1.html
+++ b/page1.html
@@ -14,12 +14,12 @@
     <div class="card-container">
         <!-- Card 1 -->
         <div class="card">
-          <img src="pictures/Razer-Deathadder-V3-ProF.jpg" alt="gaming">
+          <img src="pictures/razer-basilisk-x-v3-hyperspeed-wireless-gaming.jpg" alt="gaming">
           <div class="card-content">
             <div class="category">PELĖ</div>
-            <h2>Razer Deathadder V3</h2>
+            <h2>RAZER Basilisk X V3 HYPERSPEED</h2>
             <p>Lengvos, patogios ausinės su puikia garso izoliacija, aiškiu, galingu garsu, kokybišku mikrofonu ir universalumu įvairioms platformoms.</p>
-            <a href="https://gameroom.lt/en/mouses/products/razer-deathadder-v3-gaming-mouse-30000-dpi-13393">Pirkti</a>
+            <a href="https://gameroom.lt/en/mouses/products/razer-basilisk-x-v3-hyperspeed-wireless-gaming-13092">Pirkti</a>
           </div>
         </div>
       
